# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "ui_macroquad"
authors = ["Guglielmo Boi"]
version = "1.0.0"
edition = "2021"
exclude = [".*"]

[dependencies]
macroquad = "0.4.4"
ui_lib = { git = "ssh://git@github.com/rust-eze-robotics/ui_lib.git", branch = "main" }
ai_builder = { git = "ssh://git@github.com/rust-eze-robotics/ai_builder.git", branch = "main" }
robotics_lib = {version = "0.1.21", registry = "kellnr"}
midgard = {version = "0.1.0", registry = "kellnr"}
oxagaudiotool = {version = "0.2.0", registry = "kellnr"}
spyglass = {version = "0.1.0", registry = "kellnr"}
sense_and_find_by_Rustafariani = {version = "0.1.0", registry = "kellnr"}
OhCrab_collection = {version = "0.1.0", registry = "kellnr"}
pmp_street_picasso = {version = "0.1.0", registry = "kellnr"}
bob_lib = {version = "0.1.0", registry = "kellnr"}