# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "ui_macroquad"
authors = ["Guglielmo Boi"]
version = "1.0.0"
edition = "2021"
exclude = [".*"]

[dependencies]
macroquad = "0.4.4"
ui_lib = { git = "https://github.com/rust-eze-robotics/ui_lib.git", branch = "main" }
# ai_builder = { git = "https://github.com/rust-eze-robotics/ai_builder.git", branch = "main" }
rust_eze_ai_artemisia = { git = "https://github.com/rust-eze-robotics/ai_artemisia.git", branch = "gu" }
robotics_lib = {version = "0.1.21", registry = "kellnr"}
midgard = {version = "0.2.1", registry = "kellnr"}
oxagaudiotool = {version = "0.2.0", registry = "kellnr"}